--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Ray's Blog
+title: Build something fun
 SEOTitle: 睿的博客 | Ray's Blog
 header-img: img/home-bg.jpg
 email: rayx.cn@gmail.com
 description: "关于软件、Geek | Ray，Web & Mobile Lover，Software Engineer | 这里是 @Ray睿 类喵星人的个人博客。专注求索，创新"
-keyword: "RayX,  睿的博客, 博客, 个人网站, 互联网, Web, JavaScript, 后端, Backend, 移动物联网， Mobile Design, Machine Learning, 设计"
+keyword: "RayX, 睿的博客, 博客, 个人网站, 互联网, Web, JavaScript, 后端, Backend, 移动物联网， Mobile Design, Machine Learning, 设计"
 url: "https://ray-x.github.io"              # rayx.me
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -75,7 +75,7 @@ ga_domain: ''    # Rayx.me
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "What is new?<br>新东西"
-sidebar-avatar: /img/avatar-hux-ny.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/avatar-ray-s.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
